examples/test/testpolicy3030.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3030
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key10: value0
      key2: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value49
      podSelector:
        matchLabels:
          key33: value18
          key44: value32
